# mod_battlecity

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.am  README.md  gst-helper.cpp  gst-helper.h  mod_battlecity.cpp  renderer.cpp  renderer.h  standalone_test.cpp  standalone_test_simple.cpp  stream-controller.cpp  stream-controller.h  world.cpp  world.h
docker/: entrypoint.sh
docker/freeswitch-conf/: freeswitch.xml
docker/freeswitch-conf/autoload_configs/: logfile.conf.xml  modules.conf.xml  sofia.conf.xml  spandsp.conf.xml
docker/freeswitch-conf/dialplan/: default.xml
docker/freeswitch-conf/directory/: default.xml
docker/freeswitch-conf/sip_profiles/: internal.xml
resources/: bullet.xpm  enemy_tank.xpm  explosion.xpm  tank.xpm  tiles.xpm
